add common components, add error handling

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,7 @@
     "target": "esnext",
     "lib": ["esnext", "dom"],
     "skipLibCheck": true,
-    "resolveJsonModule": true,
-    "baseUrl": "./"
+    "resolveJsonModule": true
   },
   "exclude": ["node_modules"]
 }
