--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@backpackapp-io/react-native-toast": "^0.10.0",
+    "@react-native-community/netinfo": "9.3.10",
     "apisauce": "^3.0.1",
     "axios": "^1.5.1",
     "expo": "~49.0.13",
     "expo-image": "~1.3.4",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.5",
+    "react-native": "0.72.6",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-query": "^3.39.3"
   },
@@ -26,3 +30,4 @@
   },
   "private": true
 }
+
