--- a/package.json
+++ b/package.json
@@ -15,18 +15,19 @@
     "axios": "^1.5.1",
     "expo": "~49.0.13",
     "expo-image": "~1.3.4",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
-    "react-query": "^3.39.3",
-    "expo-splash-screen": "~0.20.5"
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "typescript": "^5.1.3"
   },
   "private": true
