--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
+    "start:clear": "expo start --clear",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test:e2e": "maestro test ./e2e/app.yaml"
   },
   "dependencies": {
     "@backpackapp-io/react-native-toast": "^0.10.0",
@@ -32,3 +34,4 @@
   },
   "private": true
 }
+
